[gd_scene load_steps=21 format=3 uid="uid://cylmulnexilu1"]

[ext_resource type="Script" uid="uid://cfmxrgd1aajts" path="res://main/scripts/player.gd" id="1_4v151"]
[ext_resource type="PackedScene" uid="uid://du24nf2qny717" path="res://art/stickman.glb" id="2_lat6o"]
[ext_resource type="AnimationLibrary" uid="uid://bjbobcjthd56o" path="res://resources/stickman_animations.tres" id="3_pi8k8"]
[ext_resource type="Script" uid="uid://bkx1cncw4hy8p" path="res://state/state_machine.gd" id="4_5ar6u"]
[ext_resource type="Script" uid="uid://dh36acmyc2bd5" path="res://state/states/idle_state.gd" id="5_07mow"]
[ext_resource type="Script" uid="uid://c1rjheg257voc" path="res://state/states/jump_state.gd" id="6_55rq2"]
[ext_resource type="Script" uid="uid://d0at0ldflqlv5" path="res://state/states/fall_state.gd" id="7_07mow"]
[ext_resource type="Script" uid="uid://mbi065r3y6qw" path="res://state/states/land_state.gd" id="8_1gbna"]
[ext_resource type="Script" uid="uid://dyntvmtwbtox0" path="res://state/states/move_state.gd" id="8_55rq2"]
[ext_resource type="Script" uid="uid://ckl5sp72wytq3" path="res://state/states/punch1_start_state.gd" id="10_2skd8"]
[ext_resource type="Script" uid="uid://c2gyddgjmh4td" path="res://state/states/fight_idle_state.gd" id="10_bsjl6"]
[ext_resource type="Script" uid="uid://dg1jqc7nac2jp" path="res://state/states/punch1_end_state.gd" id="11_pyttd"]
[ext_resource type="Script" uid="uid://7qtscrg31fca" path="res://state/states/punch2_start_state.gd" id="12_1vr6g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u6pd7"]
radius = 0.29032

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j5vtk"]
animation = &"stickman_animations/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hj1rf"]
animation = &"stickman_animations/Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_772ii"]
animation = &"stickman_animations/Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_vcy5j"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j5vtk")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_hj1rf")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_772ii")
blend_point_2/pos = 2.0
min_space = 0.0
max_space = 2.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xfbxg"]
nodes/Movement/node = SubResource("AnimationNodeBlendSpace1D_vcy5j")
nodes/Movement/position = Vector2(50, 100)
node_connections = [&"output", 0, &"Movement"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tummt"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimationTree:parameters/Movement/blend_position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Model:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4v151")
tilt_limit = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.126228)
shape = SubResource("CapsuleShape3D_u6pd7")

[node name="Model" parent="." instance=ExtResource("2_lat6o")]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Model")
libraries = {
&"stickman_animations": ExtResource("3_pi8k8")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%Model")
tree_root = SubResource("AnimationNodeBlendTree_xfbxg")
anim_player = NodePath("../AnimationPlayer")
parameters/Movement/blend_position = 1.0018

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tummt")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "initial_state")]
unique_name_in_owner = true
script = ExtResource("4_5ar6u")
character = NodePath("..")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bkx1cncw4hy8p"

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "punch1_start_state")]
script = ExtResource("5_07mow")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
move_state = NodePath("../MoveState")
punch1_start_state = NodePath("../Punch1StartState")
metadata/_custom_type_script = "uid://dh36acmyc2bd5"

[node name="JumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("6_55rq2")
idle_state = NodePath("../IdleState")
fall_state = NodePath("../FallState")
metadata/_custom_type_script = "uid://c1rjheg257voc"

[node name="FallState" type="Node" parent="StateMachine" node_paths=PackedStringArray("land_state")]
script = ExtResource("7_07mow")
land_state = NodePath("../LandState")

[node name="LandState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("8_1gbna")
idle_state = NodePath("../IdleState")

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state", "fall_state", "punch1_start_state")]
script = ExtResource("8_55rq2")
idle_state = NodePath("../IdleState")
jump_state = NodePath("../JumpState")
fall_state = NodePath("../FallState")
punch1_start_state = NodePath("../Punch1StartState")
metadata/_custom_type_script = "uid://dyntvmtwbtox0"

[node name="FightIdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("10_bsjl6")
idle_state = NodePath("../IdleState")
metadata/_custom_type_script = "uid://c2gyddgjmh4td"

[node name="Punch1StartState" type="Node" parent="StateMachine" node_paths=PackedStringArray("punch1_end_state", "punch2_start_state")]
script = ExtResource("10_2skd8")
punch1_end_state = NodePath("../Punch1EndState")
punch2_start_state = NodePath("../Punch2StartState")

[node name="Punch1EndState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fight_idle_state")]
script = ExtResource("11_pyttd")
fight_idle_state = NodePath("../FightIdleState")
metadata/_custom_type_script = "uid://dg1jqc7nac2jp"

[node name="Punch2StartState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fight_idle_state")]
script = ExtResource("12_1vr6g")
fight_idle_state = NodePath("../FightIdleState")
